metadataFolder/objects/Inquiry__c.object
<CustomObject>
    <label>Inquiry</label>
    <nameField>
        <label>Inquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Message_Queue_Inquiry</fullName>
        <filterScope>Queue</filterScope>
        <label>Message Queue</label>
        <queue>Message_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>